<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Main Activity -->
    <string name="app_name">WiFi Link Speed</string>
    <string name="app_name_toolbar">WiFi LINK SPEED</string>
    <string name="ssid_value">Starbucks Free Wifi</string>
    <string name="bssid_value">FF:FF:FF:FF:FF:FF</string>
    <string name="rssi_value">-- dBm</string>
    <string name="linkSpeed_value">-- Mbp</string>
    <string name="floatWindow_title">Floating Window</string>
    <string name="floatWindow_value">Disabled</string>
    <string name="floatWindow_value_enable">Enabled</string>
    <string name="shortcuts_title">Shortcuts</string>
    <string name="speedtest_value">Speedtest</string>
    <string name="fastcom_value">Fast.com</string>

    <!-- Main Fragment -->
    <string name="mainFrag_infoCardTitle">General</string>
    <string name="mainFrag_currentSsidTitle">SSID</string>
    <string name="mainFrag_currentWifiMacTitle">Mac address</string>
    <string name="mainFrag_currentRssiTitle">RSSI</string>
    <string name="mainFrag_currentLinkSpeedTitle">Link Speed</string>
    <string name="mainFrag_floatingWindowTitle">Floating Window</string>
    <string name="mainFrag_floatingWindowSwitchContent">Enable Floating Window</string>
    <string name="mainFrag_shortCutsTitle">Shortcuts</string>
    <string name="mainFrag_speedtestContent">Speedtest (By Ookla)</string>
    <string name="mainFrag_fastComShortcutContent">Fast.com (By Netflix)</string>
    <string name="mainFrag_aboutTitle">About</string>
    <string name="mainFrag_bugReportContent">Bug Report</string>
    <string name="mainFrag_aboutContent">About This App</string>

    <!-- Main Fragment -->
    <string name="aboutFrag_appVersion">Beta 1.1</string>
    <string name="aboutFrag_backButton">Got it</string>

    <!-- Speedtest 404 Dialog -->
    <string name="speedtestDialog_Title">Speedtest Not Found</string>
    <string name="speedtestDialog_Meg">Install from Google Play?</string>

    <!-- More Info Dialog -->
    <string name="moreinfoDialog_Title">More Info</string>
    <string name="moreinfoDialog_bssid">BSSID: </string>
    <string name="moreinfoDialog_freq">Frequency: </string>
    <string name="moreinfoDialog_myMacAddress">My MAC Address: </string>
    <string name="moreinfoDialog_inIP">Internal IP: </string>
    <string name="moreinfoDialog_exIP">External IP: </string>

    <!-- About Dialog -->
    <string name="aboutDialog_versionTitle">Version</string>
    <string name="aboutDialog_creditTitle">Credit</string>
    <string name="aboutDialog_createdByTitle">Created By</string>
    <string name="aboutDialog_createdByValue">Trevor</string>
    <string name="aboutDialog_creditValueIcon">Icon made by Freepik from FlatIcon</string>
    <!-- https://www.flaticon.com/free-icon/acceleration_181423 -->

    <!-- Menu item -->
    <string name="menu_aboutValue">About</string>
    <string name="menu_settings">Settings</string>

    <!-- Global -->
    <string name="global_ok">OK</string>
    <string name="global_yes">yes</string>
    <string name="global_no">No</string>
    <string name="global_done">Done</string>
    <string name="global_cancel">Cancel</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
</resources>
